# rosetta

./: package.json  pnpm-lock.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: errors.rs  main.rs  shortcuts.rs  translate_service.rs
src-tauri/src/translate_service/: baidu_translator.rs  volcengine_translator.rs
src/router/: index.ts
src/store/: sidebar.ts
src/types/: TranslateConfigs.ts  TranslateResults.ts
src/views/: GeneralSettings.vue  OcrSettings.vue  TranslateSettings.vue  TranslateWindow.vue
