[package]
name = "rosetta"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
# reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1"
anyhow = "1.0.86"
thiserror = "1.0.62"
once_cell = "1.19.0"
selection = "1.2.0"
rdev = "0.5.3"
tauri-runtime = "2"
sha2 = "0.10.8"
hmac = "0.12.1"
chrono = "0.4.39"
hex = "0.4.3"
md5 = "0.7.0"
nanoid = "0.4.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-shell = "2"
# [target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
